<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/field">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dig_n_dug"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="45sp"
        android:layout_marginTop="100dp"
        android:textColor="@color/colorDarkDirt"/>


    <Button
        android:theme="@style/AppTheme.BlackButton"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:elevation="8dp"
        android:textSize="17sp"
        android:text="@string/start"
        android:textColor="@android:color/white"
        android:id="@+id/start_game"/>

    <Button
        android:theme="@style/AppTheme.BlackButton"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:elevation="8dp"
        android:textSize="17sp"
        android:text="@string/creds"
        android:textColor="@android:color/white"
        android:id="@+id/to_credits"/>

</LinearLayout>